@@ -8,6 +8,7 @@ Revision history for Perl module Dackup:
      - add verbose option
      - fix bug with ssh transport and filenames containing spaces 
        and quotes
+     - for ssh transport, use Perl instead of stat / find / xargs
 
 0.33 Tue Feb 17 21:07:34 CST 2009
      - initial release
